[tool.poetry]
name = "repl_python3_cs9-final-project-judy318"
version = "0.1.0"
description = ""
authors = ["JudithWeintraub <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
PyDictionary = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
